All sections are automatically shown in detail page.
All sections are automatically shown in detail page.

--- a/chore_tracker/chore_app/templates/chore_app/detail.html
+++ b/chore_tracker/chore_app/templates/chore_app/detail.html
@@ -124,7 +124,7 @@
 					<button id='dropdown-tomorrow' type='button' class='btn' data-toggle='collapse' data-target='#tomorrow'>TOMORROW
 						<b class="caret"></b></button>
 				</div>
-				<div id='tomorrow' class='collapse'>
+				<div id='tomorrow' class='collapse in'>
 					<p id='no-chores'>No chores for tomorrow</p>
 				</div>
 			</div>
@@ -167,7 +167,7 @@
 					<button id='dropdown-upcoming' type='button' class='btn' data-toggle='collapse' data-target='#upcoming'>UPCOMING 
 						<b class="caret"></b></button>
 				</div>
-				<div id='upcoming' class='collapse'>
+				<div id='upcoming' class='collapse in'>
 					<p id='no-chores'>No upcoming chores</p>
 				</div>
 			</div>
