Added Select of Add a House heading.
Added Select of Add a House heading.

--- a/chore_tracker/house/templates/house/house.html
+++ b/chore_tracker/house/templates/house/house.html
@@ -7,7 +7,10 @@
 		<a href="{% url 'house:addHouse' %}" class="btn btn-primary" role="button">Add House</a>
 	</div>
 	<div>
-		<h1>Houses:</h1>
+		<h1>Select or Add a House</h1>
+	</div>
+	<div>
+		<h2>Houses:</h2>
 	</div>
 	{{ login.username }}
 	{% if houses %}
