--- a/chore_tracker/chore_app/templates/chore_app/navbar.html
+++ b/chore_tracker/chore_app/templates/chore_app/navbar.html
@@ -24,7 +24,7 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ user.username }}<b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li class='separator'><a href="{% url 'chore_app:index' house.id %}">My House</a></li>
-                            <li><a href="/accounts/logout/">Log out</a></li>
+                            <li><a href="/accounts/login/">Log out</a></li>
                         </ul>
                     </li>
                 </ul>
