--- a/chore_tracker/house/templates/house/navbar.html
+++ b/chore_tracker/house/templates/house/navbar.html
@@ -23,7 +23,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ user.username }}<b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="/accounts/login/">Log out</a></li>
+                            <li><a href="/accounts/logout/">Log out</a></li>
                         </ul>
                     </li>
                 </ul>
