Added login link to logout page.
Added login link to logout page.

--- a/chore_tracker/chore_app/templates/chore_app/registration/logout.html
+++ b/chore_tracker/chore_app/templates/chore_app/registration/logout.html
@@ -9,5 +9,9 @@
 {% endblock %}
 
 {% block content %}
-<p>{% trans "Logged out" %}</p>
+
+<div class="jumbotron">
+        <h2>You are Logged Out.</h2>
+        <p><a href="/accounts/login/">Login to Chore Tracker! </a></p>
+    </div>
 {% endblock %}
