--- a/chore_tracker/chore_app/templates/chore_app/home.html
+++ b/chore_tracker/chore_app/templates/chore_app/home.html
@@ -18,8 +18,8 @@
 {% block content %}
     <!-- Main component for a primary marketing message or call to action -->
     <div class="jumbotron">
-        <h1>Welcome to Chore Tracker!</h1>
-        <p>This app is so helpful and you can't miss it.</p>
+        <h1>Welcome to the Chore Tracker!</h1>
+        <p>Keep track of all house hold chores with the Chore Tracker web application!</p>
     </div>
 
 {% endblock %}
