removing things from the page borders

--- a/chore_tracker/chore_app/templates/chore_app/addChore.html
+++ b/chore_tracker/chore_app/templates/chore_app/addChore.html
@@ -7,7 +7,7 @@
 	<div class="add">
 		<h1>New Chore</h1>
 	</div> 
-	<div <div class="col-sm-3">
+	<div class="col-sm-3">
 		<form method='POST' action=''>
 			{% csrf_token %}
 			{{ form.as_p }}
