--- a/chore_tracker/chore_app/templates/chore_app/detail.html
+++ b/chore_tracker/chore_app/templates/chore_app/detail.html
@@ -3,7 +3,7 @@
 {% block content %}
 <body>
 	<title>Details</title>
-	<div>
+	<div class="col-sm-12">
 		<div id='name'>
 			<h1>{{ housemate.full_name }}</h1>
 		</div>
