--- a/chore_tracker/chore_app/static/chore_app/style.css
+++ b/chore_tracker/chore_app/static/chore_app/style.css
@@ -74,7 +74,7 @@ input[type='submit'] {
     float: right;
     margin-bottom: 10;
     margin-right: 5;
-    margin-top: 30
+    margin-top: 30;
 }
 
 #add-house {
