--- a/chore_tracker/house/templates/house/house.html
+++ b/chore_tracker/house/templates/house/house.html
@@ -6,42 +6,45 @@
 	<div id='add-house'>
 		<a href="{% url 'house:addHouse' %}" class="btn btn-primary" role="button">Add House</a>
 	</div>
-	<div>
-		<h1>Search or Add a House</h1>
-	</div>
-	<div>
-    	<form id="searchform" method='GET' action='' class="searchbutton">
-		    <input id="searchfield" type='text' name='q' placeholder='Search Houses' value = '{{request.GET.q}}'/>		
-		    <input type='submit' value='Search'/>           
-		</form>
-   	</div>
-	
-	{% if houses %}
+	<div class="col-sm-6">
+		
 		<div>
-			<!--This div below id for the search bar -->
-		    <ul>
-		    {% for house in houses %}
-		    	<div>
-		    		<li>
-		    			<a href="{% url 'chore_app:index' house.id %}" class='house-name'>{{ house.house_name }}</a>
-		        		<a href="{% url 'house:editHouse' house.id %}" class="btn btn-info" id='edit-del-btn'><span class="glyphicon glyphicon-pencil"></span></a>
-		        		<a href="{% url 'house:deleteHouse' house.id %}" class="btn btn-danger" onclick='clicked(event)' id='edit-del-btn'>
-		        			<script>
-		        				function clicked(e) {
-		        					if(!confirm('Are you sure you want to delete this house?')) {
-		        						e.preventDefault();
-		        					}
-		        				}
-		        			</script>
-		        			<span class="glyphicon glyphicon-trash"></span>
-		        		</a>
-		    		</li>
-		    	<div>
-		    {% endfor %}
-		    </ul>
+			<h1>Search or Add a House</h1>
 		</div>
-	{% else %}
-	    <p>No houses were found.</p>
-	{% endif %}
+		<div>
+	    	<form id="searchform" method='GET' action='' class="searchbutton">
+			    <input id="searchfield" type='text' name='q' placeholder='Search Houses' value = '{{request.GET.q}}'/>		
+			    <input type='submit' value='Search'/>           
+			</form>
+	   	</div>
+		
+		{% if houses %}
+			<div>
+				<!--This div below id for the search bar -->
+			    <ul>
+			    {% for house in houses %}
+			    	<div>
+			    		<li>
+			    			<a href="{% url 'chore_app:index' house.id %}" class='house-name'>{{ house.house_name }}</a>
+			        		<a href="{% url 'house:editHouse' house.id %}" class="btn btn-info" id='edit-del-btn'><span class="glyphicon glyphicon-pencil"></span></a>
+			        		<a href="{% url 'house:deleteHouse' house.id %}" class="btn btn-danger" onclick='clicked(event)' id='edit-del-btn'>
+			        			<script>
+			        				function clicked(e) {
+			        					if(!confirm('Are you sure you want to delete this house?')) {
+			        						e.preventDefault();
+			        					}
+			        				}
+			        			</script>
+			        			<span class="glyphicon glyphicon-trash"></span>
+			        		</a>
+			    		</li>
+			    	<div>
+			    {% endfor %}
+			    </ul>
+			</div>
+		{% else %}
+		    <p>No houses were found.</p>
+		{% endif %}
+	</div>
 </body>
 {% endblock %}
