Added glyphicon to search button
Added glyphicon to search button

--- a/chore_tracker/house/templates/house/house.html
+++ b/chore_tracker/house/templates/house/house.html
@@ -13,8 +13,8 @@
 		</div>
 		<div>
 	    	<form id="searchform" method='GET' action='' class="searchbutton">
-			    <input id="searchfield" type='text' name='q' placeholder='Search Houses' value = '{{request.GET.q}}'/>		
-			    <input type='submit' value='Search'/>           
+			    <input id="searchfield" type='text' name='q' placeholder='Search Houses' value = '{{request.GET.q}}'/>	
+			    <button type="submit" class = "btn btn-info"><span class="glyphicon glyphicon-search"></span></button>       
 			</form>
 	   	</div>
 		
