Made edit house button on index page.  Removed link from house heading.
Made edit house button on index page.  Removed link from house heading.

--- a/chore_tracker/chore_app/static/chore_app/style.css
+++ b/chore_tracker/chore_app/static/chore_app/style.css
@@ -77,11 +77,25 @@ input[type='submit'] {
     margin-top: 20;
 }
 
+#edit-house {
+    float: right;
+    margin-bottom: 10;
+    margin-top: 20;
+    margin-right: 10;
+}
+
 #add-house {
     float: right;
     margin-bottom: 10;
     margin-top: 20;
     margin-right: 10;
+}
+
+#house-name-heading {
+    font-size: 50;
+    font-family: Cambria ;
+    font-weight: 300;
+    color: #0D3B63;
 }
 
 a.housemate-name {
@@ -95,13 +109,6 @@ a.house-name {
     font-size: 30;
     font-family: 'Open sans', 'Segoe UI', 'Calibri';
     font-weight: 300;
-}
-
-a.house-name-heading {
-    font-size: 50;
-    font-family: Cambria ;
-    font-weight: 300;
-    color: #0D3B63;
 }
 
 #edit-del-btn {
