--- a/chore_tracker/chore_app/templates/chore_app/index.html
+++ b/chore_tracker/chore_app/templates/chore_app/index.html
@@ -4,12 +4,15 @@
 <title>House details</title>
 <body>
     <div class="col-sm-12">
+        <div id='edit-house'>
+            <a href="{% url 'house:editHouse' house.id  %}" class="btn btn-primary" role="button">Edit House</a>
+        </div>
     	<div id='add-housemate'>
     		<a href="{% url 'chore_app:addHousemate' house.id %}" class="btn btn-primary" role="button">Add Housemate</a>
     	</div>
-    	<div>
-    	   <a href="{% url 'house:editHouse' house.id %}" class='house-name-heading'>{{ house}}</a>
-    	</div>
+    	<div id='house-name-heading'>
+            <h1>{{ house }}</h1>
+        </div>
         {% if house.housemate_set.all %}
     	<div>
     	    <ul>
