--- a/chore_tracker/chore_app/templates/chore_app/addHousemate.html
+++ b/chore_tracker/chore_app/templates/chore_app/addHousemate.html
@@ -3,7 +3,7 @@
 {% block content %}
 <title>New Housemate</title>
 <body>
-    <div class="col-sm-4">
+    <div class="col-xs-8 col-xs-offset-1 col-sm-6 col-sm-offset-2 col-md-4 col-md-offset-1">
 		<h1>New Housemate</h1> 
 		<form method='post' action=''>
 			{% csrf_token %}		
