--- a/chore_tracker/chore_app/templates/chore_app/home.html
+++ b/chore_tracker/chore_app/templates/chore_app/home.html
@@ -20,6 +20,7 @@
     <div class="jumbotron">
         <h1>Welcome to the Chore Tracker!</h1>
         <p>Keep track of all house hold chores with the Chore Tracker web application!</p>
+        <p><a href="/accounts/login/">Login to Chore Tracker! </a></p>
     </div>
 
 {% endblock %}
