--- a/chore_tracker/chore_app/templates/chore_app/home.html
+++ b/chore_tracker/chore_app/templates/chore_app/home.html
@@ -5,12 +5,7 @@
 {% block navbar %}
     <ul class="nav navbar-nav navbar-right">
 {#        <li class="active"><a href="./">Static top <span class="sr-only">(current)</span></a></li>#}
-        {% if request.user.is_authenticated %}
-            <li><a href="../accounts/logout/">Log out</a> </li>
-        {% else %}
-            <li><a href="../accounts/login/">Login</a></li>
-            <li><a href="../accounts/register/">Register</a></li>
-        {% endif %}
+        
     </ul>
 
 {% endblock %}
@@ -21,6 +16,7 @@
         <h1>Welcome to the Chore Tracker!</h1>
         <p>Keep track of all house hold chores with the Chore Tracker web application!</p>
         <p><a href="/accounts/login/">Login to Chore Tracker! </a></p>
+        <p><a href="/accounts/register/"> Register </a></p>
     </div>
 
 {% endblock %}
