--- a/chore_tracker/chore_app/static/chore_app/style.css
+++ b/chore_tracker/chore_app/static/chore_app/style.css
@@ -169,7 +169,7 @@ th.table-header {
     outline: none;
 }
 
-#dropdown-today {
+#dropdown-today, #dropdown-tomorrow, #dropdown-upcoming {
     font-family: 'Open Sans', 'Segoe UI', Frutiger, 'Frutiger Linotype', 'Dejavu Sans', 'Helvetica Neue', Tahoma, Arial, sans-serif;
     background-color: #54B6FF;
     font-weight: 300;
@@ -181,33 +181,18 @@ th.table-header {
     outline: none;
 }
 
+
+#dropdown-tomorrow {
+    background-color: #81C5FF;
+}
+
+#dropdown-upcoming {
+    background-color: #BED1E3;
+}
+
 #no-chores {
     font-family: 'Open Sans', 'Segoe UI', Tahoma, Arial, sans-serif, Sans;
     font-size: 20;
     font-weight: 400;
     text-align: center;
-}
-
-#dropdown-tomorrow {
-    font-family: 'Segoe UI', 'Dejavu Sans', Calibri, Dejavu, Frutiger, Tahoma, Arial, Helvetica, Times;
-    background-color: #81C5FF;
-    font-weight: 300;
-    border-radius: 7px;
-    font-size: 24;
-    text-align: center;
-    padding: 0;
-    width:100%;
-    outline: none;
-}
-
-#dropdown-upcoming {
-    font-family: 'Segoe UI', 'Dejavu Sans', Calibri, Dejavu, Frutiger, Tahoma, Arial, Helvetica, Times;
-    background-color: #BED1E3;
-    font-weight: 300;
-    border-radius: 7px;
-    font-size: 24;
-    text-align: center;
-    padding: 0;
-    width:100%;
-    outline: none;
 }
