Centered the text of the first screen

--- a/chore_tracker/chore_app/templates/chore_app/home.html
+++ b/chore_tracker/chore_app/templates/chore_app/home.html
@@ -11,11 +11,13 @@
 
 {% block content %}
     <!-- Main component for a primary marketing message or call to action -->
-    <div class="jumbotron">
-        <h1>Welcome to the Chore Tracker!</h1>
-        <p>Keep track of all house hold chores with the Chore Tracker web application!</p>
-        <p><a href="/accounts/login/">Login to Chore Tracker </a></p>
-        <p><a href="/accounts/register/"> Register </a></p>
+    <div class="col-xs-12">
+	    <div class="jumbotron"> <center>
+	        <h1>Welcome to the Chore Tracker!</h1>
+	        <p>Keep track of all house hold chores with the Chore Tracker web application!</p>
+	        <p><a href="/accounts/login/">Login to Chore Tracker </a></p>
+	        <p><a href="/accounts/register/"> Register </a></p>
+	    </center></div>
     </div>
 
 {% endblock %}
