added logo on home page

--- a/chore_tracker/chore_app/templates/chore_app/base.html
+++ b/chore_tracker/chore_app/templates/chore_app/base.html
@@ -10,10 +10,13 @@
 {#</html>#}
 <!DOCTYPE html>
 <html lang="en">
+  {% load staticfiles %}
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'chore_app/images/icon2.png' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'chore_app/style.css' %}"/>
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
