changed inde to houseSummary

--- a/chore_tracker/house/templates/house/editHouse.html
+++ b/chore_tracker/house/templates/house/editHouse.html
@@ -17,7 +17,7 @@
                     <input type='submit' class = "btn btn-success pull-left" value='Save'/>
                 </div>
                 <div class="cancel">
-                    <a href="{% url 'chore_app:index' house.id %}" class="btn btn-danger" role="button">Cancel</a>
+                    <a href="{% url 'chore_app:houseSummary' house.id %}" class="btn btn-danger" role="button">Cancel</a>
                 </div>
             </form>
         </div>
