--- a/chore_tracker/chore_app/templates/chore_app/navbar.html
+++ b/chore_tracker/chore_app/templates/chore_app/navbar.html
@@ -11,7 +11,7 @@
     <!-- Black navbar header -->
     <nav class="navbar navbar-inverse navbar-static-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'chore_app:index' house.id %}">Chore Tracker</a>
+            <a class="navbar-brand" href="{% url 'chore_app:houseSummary' house.id %}">Chore Tracker</a>
             <button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -23,7 +23,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ user.username }}<b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li class='separator'><a href="{% url 'chore_app:index' house.id %}">My House</a></li>
+                            <li class='separator'><a href="{% url 'chore_app:houseSummary' house.id %}">My House</a></li>
                             <li><a href="/accounts/logout/">Log out</a></li>
                         </ul>
                     </li>
