Changed editHousemate, choreSummary names

--- a/chore_tracker/chore_app/templates/chore_app/addChore.html
+++ b/chore_tracker/chore_app/templates/chore_app/addChore.html
@@ -15,7 +15,7 @@
 				<input type='submit' class = "btn btn-success pull-left" value='Add Chore'/>
 			</div>
 			<div class='cancel'>
-				<a href="{% url 'chore_app:detail' house.id housemate.id %}" class="btn btn-danger" role="button">Cancel</a>
+				<a href="{% url 'chore_app:choreSummary' house.id housemate.id %}" class="btn btn-danger" role="button">Cancel</a>
 			</div>
 		</form>
 	</div>
